# mystic-mcp

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: api.md  conf.py  examples.md  index.md  quickstart.md  requirements.txt
examples/pizza_ordering/: main.py
mystic_mcp/: __init__.py  ast_utils.py  cli.py  core.py  types.py
tests/: test_core.py
